[workspace]
members = [
    "avalanchego-conformance-sdk",
    "core/network",
    "core/server",
    "crates/avalanche-consensus",
    "crates/avalanche-types",
    "tests/avalanche-e2e",
    "tests/avalanchego-byzantine",
    "tests/avalanchego-conformance",
]
# by default, only document and build key library crates
default-members = ["crates/avalanche-types", "crates/avalanche-consensus"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["gyuho", "hexfusion", "exdx", "richardpringle"]
description = "A collection of Avalanche-specific Rust crates"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://www.avax.network/"
