[package]
name = "avalanchego-conformance-sdk"
version = "0.0.0"
edition = "2021"
rust-version = "1.70" # use "rustup override set stable" to overwrite current toolchain
publish = false
description = "avalanchego-conformance-sdk in Rust"
license-file = "LICENSE"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanchego-conformance-sdk"

[dependencies]
log = "0.4.20"
prost = "0.12.1"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread"] } # https://github.com/tokio-rs/tokio/releases
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.9.2"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tags
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.9.2"

[dev-dependencies]
env_logger = "0.10.0"
