[package]
name = "cert-manager"
version = "0.0.11" # https://crates.io/crates/cert-manager

edition = "2021"
rust-version = "1.69"
publish = true
description = "Cert manager in Rust"
# copied-from:
repository = "https://github.com/gyuho/cert-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
log = "0.4.20"
rand = "0.8.5"
random-manager = "0.0.5" # https://crates.io/crates/random-manager/versions
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
rsa = { version = "0.9.2", features = ["pem"] } # https://crates.io/crates/rsa
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
x509-parser = "0.15.1"

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.5.0"

[package.metadata.cargo-udeps.ignore]
normal = ["rsa"]
