[package]
name = "network"
version = "0.0.1"
edition = "2021"
rust-version = "1.70" # use "rustup override set stable" to overwrite current toolchain
publish = false
description = "Avalanche network"
license-file = "LICENSE"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-rs/tree/main/core/network"
readme = "README.md"

[dependencies]
avalanche-types = { path = "../../crates/avalanche-types", features = ["message"] }
byteorder = "1.4.3"
cert-manager = "0.0.10" # https://github.com/gyuho/cert-manager
log = "0.4.20"
rustls = { version = "0.21.5", features = ["logging", "dangerous_configuration"] } # https://github.com/rustls/rustls/tags
rcgen = "0.10.0"
hyper-rustls = "0.24.1"
rustls-native-certs = "0.6.3"
hyper = { version = "0.14.27", features = ["full"], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tokio = { version = "1.32.0", features = ["sync", "time"] }
prost = "0.12.0"
prost-types = "0.12.0"
prost-build = "0.12.0"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }

# for feature "pem"
pem = { version = "3.0.0", optional = true } # https://github.com/jcreekmore/pem-rs


[dev-dependencies]
env_logger = "0.10.0"
mockall = "0.11.4"
proptest = "1.2.0"
random-manager = "0.0.5"
testing_logger = "0.1.1"
tokio = { version = "1.32.0", features = ["sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tags
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.9.2"

[features]
default = ["rustls", "pem_encoding"]
rustls = ["hyper", "tokio-rustls"]
pem_encoding = ["pem"]

[[example]]
name = "peer_outbound_ping"
required-features = ["rustls", "pem_encoding"]

[package.metadata.cargo-udeps.ignore]
normal = ["hyper", "tokio-rustls"]
