[package]
name = "avalanchego-byzantine"
version = "0.0.0"
edition = "2021"
rust-version = "1.70" # use "rustup override set stable" to overwrite current toolchain
publish = false
description = "Byzantine tests for Avalanche Go"
license-file = "LICENSE"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.77"
avalanche-network-runner-sdk = "0.3.3" # https://crates.io/crates/avalanche-network-runner-sdk
avalanche-types = { path = "../../crates/avalanche-types", features = ["jsonrpc_client"] } # https://crates.io/crates/avalanche-types
cert-manager = "0.0.10" # https://github.com/gyuho/cert-manager
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.20"
network = { path = "../../core/network" }
random-manager = "0.0.5"
serde_json = "1.0.104" # https://github.com/serde-rs/json/releases
tokio = { version = "1.32.0", features = [] } # https://github.com/tokio-rs/tokio/releases
