[package]
name = "avalanchego-conformance"
version = "0.0.0"
edition = "2021"
rust-version = "1.70" # use "rustup override set stable" to overwrite current toolchain
publish = false
description = "Conformance tests on AvalancheGo"
license-file = "LICENSE"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-types = { path = "../../crates/avalanche-types", features = ["libsecp256k1", "message"] }
avalanchego-conformance-sdk = { path = "../../avalanchego-conformance-sdk" }
cert-manager = "0.0.11" # https://github.com/gyuho/cert-manager
env_logger = "0.10.0"
log = "0.4.20"
random-manager = "0.0.5"
serde_json = "1.0.104" # https://github.com/serde-rs/json/releases
tokio = { version = "1.32.0", features = [] } # https://github.com/tokio-rs/tokio/releases
